welcome.lessons.welcome.bdr.BDR.scala.error
BDRBuggle:4: error: type mismatch;
 found   : Unit
 required: Boolean
while (Letter=true) {
             ^BDRBuggle:5: error: type mismatch;
 found   : String
 required: Int
	Msg = litMessage();
                        ^BDRBuggle:6: error: type mismatch;
 found   : String("R")
 required: Int
	if (Msg="R") {droite();avance();}
                ^BDRBuggle:6: error: type mismatch;
 found   : Unit
 required: Boolean
	if (Msg="R") {droite();avance();}
               ^BDRBuggle:7: error: type mismatch;
 found   : String("L")
 required: Int
	if (Msg="L") {gauche();avance();}
                ^BDRBuggle:7: error: type mismatch;
 found   : Unit
 required: Boolean
	if (Msg="L") {gauche();avance();}
               ^BDRBuggle:8: error: type mismatch;
 found   : String("I")
 required: Int
	if (Msg="I") {droite();droite();avance();}
                ^BDRBuggle:8: error: type mismatch;
 found   : Unit
 required: Boolean
	if (Msg="I") {droite();droite();avance();}
               ^BDRBuggle:9: error: type mismatch;
 found   : String("A")
 required: Int
	if (Msg="A") avance();
                ^BDRBuggle:9: error: type mismatch;
 found   : Unit
 required: Boolean
	if (Msg="A") avance();
               ^BDRBuggle:10: error: type mismatch;
 found   : String("B")
 required: Int
	if (Msg="B") avance(2);
                ^BDRBuggle:10: error: type mismatch;
 found   : Unit
 required: Boolean
	if (Msg="B") avance(2);
               ^BDRBuggle:11: error: type mismatch;
 found   : String("C")
 required: Int
	if (Msg="C") avance(3);
                ^BDRBuggle:11: error: type mismatch;
 found   : Unit
 required: Boolean
	if (Msg="C") avance(3);
               ^BDRBuggle:12: error: type mismatch;
 found   : String("Z")
 required: Int
	if (Msg="Z") recule();
                ^BDRBuggle:12: error: type mismatch;
 found   : Unit
 required: Boolean
	if (Msg="Z") recule();
               ^BDRBuggle:13: error: type mismatch;
 found   : String("Y")
 required: Int
	if (Msg="Y") recule(2);
                ^BDRBuggle:13: error: type mismatch;
 found   : Unit
 required: Boolean
	if (Msg="Y") recule(2);
               ^BDRBuggle:14: error: type mismatch;
 found   : String("X")
 required: Int
	if (Msg="X") recule(3)	
                ^BDRBuggle:14: error: type mismatch;
 found   : Unit
 required: Boolean
	if (Msg="X") recule(3)	
               ^